--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,4 +1,8 @@
-FROM adoptopenjdk/openjdk11:debian
-RUN mkdir /opt/app
-COPY app/target/app*.jar /opt/app/app.jar
-CMD ["java", "-jar", "/opt/app/app.jar"]
+FROM openjdk:11-jre-slim
+
+LABEL org.opencontainers.image.authors="desarrollo@lamansys.com.ar"
+
+WORKDIR /app
+COPY app/target/app*.jar /app/app.jar
+
+ENTRYPOINT ["java","-jar","/app/app.jar"]
