--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -47,7 +47,7 @@ ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 hsi.extensions.rest.url=demo
 
 # Tableros
-app.gateway.cubejs.apiUrl=${CUBEJS_URL:http://localhost:4000/cubejs-api/v1}
+app.gateway.cubejs.apiUrl=http://localhost:4000/cubejs-api/v1
 
 # Feature flag turnero
 app.feature.HABILITAR_LLAMADO=${HABILITAR_LLAMADO:true}
