tg-6676 Quito bibliteca de odontología

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,17 +1,20 @@
 FROM nginx:1.21.3
 
+LABEL org.opencontainers.image.authors="desarrollo@lamansys.com.ar"
+
 COPY nginx-template.conf /nginx-template.conf
 
 WORKDIR /app
 
-COPY apps/dist/hospital/ ./front-end
-COPY backoffice/build/ ./backoffice
+COPY apps/dist/hospital/ /app/front-end/
+COPY backoffice/build/   /app/backoffice/
+
 COPY entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
 
-EXPOSE 8280
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
