Comienza desarrollo de 1.36

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -181,3 +181,7 @@ databaseChangeLog:
     relativeToChangelogFile: true
 
 # Los forks deberían agregar sus incrementales debajo de esta línea para evitar conflictos
+
+- include:
+    file: incrementales-v1_36.yml
+    relativeToChangelogFile: true
