tg-6938 [BD] Agrega campo modification_reason en tabla document

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_37.yml
@@ -829,3 +829,15 @@ databaseChangeLog:
                 UPDATE service_request_category SET description = 'Diagnóstico por imágenes' WHERE id = '363679005';
                 UPDATE service_request_category SET description = 'Laboratorio' WHERE id = '108252007';
                 UPDATE service_request_category SET description = 'Procedimientos quirúrgicos' WHERE id = '387713003';
+   
+    - changeSet:  
+        id: add-column-modification_reason-document
+        comment: Add modification_reason column in document table
+        author: bchacon
+        changes:
+          - addColumn:
+              columns:
+                - column:              
+                    name: modification_reason
+                    type: text
+              tableName: document
